fixes footer z-index issue for prescribe button

--- a/salesaid/animas/res/css/global.css
+++ b/salesaid/animas/res/css/global.css
@@ -4,6 +4,10 @@ html{
 	padding:0px;
 	width:1024px;
 	height:768px;
+     -webkit-touch-callout: none;
+        -webkit-user-select: none;
+        user-select: none;
+        -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -19,6 +23,10 @@ body {
 	position:relative;
 }
 
+footer {
+	z-index: 99999999;
+}
+
 .targets {
   display: none;
 }
@@ -27,6 +35,7 @@ body {
 	position: absolute;
 	right: 120px;
 	bottom: 10px;
+	z-index: 9999999;
 }
 
 .left{
@@ -93,7 +102,7 @@ footer
 	width: 100%;
 	position:absolute;
 	bottom: 0px;
-	z-index:998;
+	z-index:9999999;
 }
 
 footer .logo {
